<resources>
    <string name="app_name">BFit</string>

    <!-- Shared among Register and Login activities -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>

    <string name="required_field_error">Required field.</string>
    <string name="email_bad_format_error">Invalid email format.</string>
    <string name="password_bad_format_error">Minimum 8 alphanumeric characters. At least one letter and one number.</string>

    <!-- LoginActivity-->
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>
    <string name="login_no_account_button"><u>Create account</u></string>

    <string name="login_progress_dialog_message">Logging in…</string>

    <string name="login_email_not_exist_error">A user with that email does not exist.</string>
    <string name="login_wrong_password_error">Incorrect password.</string>

    <!-- RegisterActivity -->
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="register_email_exists_error">This email is already in use by another account.</string>
    <string name="register_repeat_password_error">Must be same as password.</string>
    <string name="register_display_name_format_error">Must contain from 2 to 12 alphanumeric characters and begin with a letter.</string>
    <string name="register_full_name_format_error">Must contain from 2 to 30 characters. Letters and spaces allowed.</string>
    <string name="register_phone_format_error">Must contain 9 to 12 digits, optionally preceded with a "+".</string>
    <string name="register_avatar_error">Must choose an image.</string>

    <string name="register_progress_dialog_message">Registering…</string>
    <string name="register_failed_message">Unable to register at the moment.</string>

    <string name="register_storage_permission_title">Storage access required</string>
    <string name="register_storage_permission_message">The application requires access to read external storage
    in order to load an image from gallery. If you deny the permission, you can still add an avatar using your
        Camera application.</string>
    <string name="register_storage_permission_message_no_ask">In order to choose an image from gallery, the
        application requires access to read storage. Please either enable the storage permission or take a
        picture using the Camera application.</string>

    <string name="display_name_hint">Display name</string>
    <string name="full_name_hint">Full name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="avatar_choose_button">Choose</string>

    <!-- Action bar -->
    <string name="action_bar_profile">Profile</string>
    <string name="action_bar_leaderboard">Leaderboard</string>
    <string name="action_bar_about">About</string>
    <string name="action_bar_friends">Friends</string>
    <string name="action_bar_challenge">Add Challenge</string>
    <string name="action_bar_logout">Logout</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_settings">Settings</string>

    <!-- MapFragment -->
    <string name="location_permission_title">Location required</string>
    <string name="location_permission_message">In order to see your position on the map
        and interact with other players, you must allow this app to access your location.</string>

    <!-- NoLocationFragment -->
    <string name="no_location_title">Location Disabled</string>
    <string name="no_location_message">In order to play <b>BFit</b> we need you to enable Location on your
        phone. After you have done that, you will instantly be able to play. \n\nIf this screen doesn\'t
        automatically close after enabling device Location, click the button below.</string>
    <string name="no_location_button_continue">Continue</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_background_service_key">BackgroundService</string>
    <string name="pref_background_service_title">Background Service</string>
    <string name="pref_background_service_summary">Tracks your location and notifies you of nearby users when the app
        is not running.</string>

    <!-- ProfileActivity -->
    <string name="profile_friend_request_button_unfriend">Unfriend</string>
    <string name="profile_friend_request_button_add">Add friend</string>
    <string name="profile_friend_request_button_cancel">Cancel request</string>
    <string name="profile_friend_request_button_accept">Accept request</string>

    <!-- FriendsActivity -->
    <string name="friend_requests_title">Friend requests</string>
    <string name="friends_title">Friends</string>
    <string name="friend_requests_empty">You don\'t have any friend requests right now.</string>
    <string name="friends_empty">You have not made any friends yet.</string>

    <!-- Friend/FriendRequest item -->
    <string name="friend_item_accept_text">Accept</string>
    <string name="friend_item_decline_text">Decline</string>

    <!-- Add Challenge Fragment -->
    <string name="add_challenge_title">Add Challenge</string>

    <!-- Challenges -->
    <string name="challenge_no_power_message">You don\'t have enough power.</string>

    <!-- AboutActivity -->
    <string name="about_text">BFit is the only fitness app that you\'ll ever need! At this moment it only supports Android devices and it can be used absolutely anywhere to get fit. </string>

</resources>
