<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/register_email_text"
        android:text="atestemail@gmail.com"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/login_field_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/login_field_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.494"/>

    <EditText
        android:id="@+id/register_password_text"
        android:text="stagodgod3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_email_text"
        app:layout_constraintLeft_toLeftOf="@+id/register_email_text"
        app:layout_constraintRight_toRightOf="@+id/register_email_text" />

    <EditText
        android:id="@+id/register_repeat_password_text"
        android:text="stagodgod3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_password_text"
        app:layout_constraintLeft_toLeftOf="@+id/register_password_text"
        app:layout_constraintRight_toRightOf="@+id/register_password_text" />

    <EditText
        android:id="@+id/display_name_text"
        android:text="andrija"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/display_name_hint"
        android:inputType="text"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_repeat_password_text"
        app:layout_constraintLeft_toLeftOf="@+id/register_repeat_password_text"
        app:layout_constraintRight_toRightOf="@+id/register_repeat_password_text" />

    <EditText
        android:id="@+id/full_name_text"
        android:text="AndrijaPesic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/full_name_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/display_name_text"
        app:layout_constraintLeft_toLeftOf="@+id/display_name_text"
        app:layout_constraintRight_toRightOf="@+id/display_name_text" />

    <EditText
        android:id="@+id/phone_text"
        android:text="0603942110"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/full_name_text"
        app:layout_constraintLeft_toLeftOf="@+id/full_name_text"
        app:layout_constraintRight_toRightOf="@+id/full_name_text" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/edit_info_avatar_size"
        android:layout_height="@dimen/edit_info_avatar_size"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="@dimen/login_field_top_margin"
        android:background="@drawable/default_avatar"
        android:clickable="true"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="@+id/phone_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <Button
        android:id="@+id/choose_avatar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar_choose_button"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        app:layout_constraintRight_toRightOf="@+id/phone_text"
        android:drawableLeft="@drawable/ic_image_24dp"
        android:drawablePadding="8dp"
        android:theme="@style/PrimaryButton" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onRegisterClick"
        android:text="@string/register_button"
        android:theme="@style/PrimaryButton"
        app:layout_constraintEnd_toEndOf="@+id/choose_avatar_btn"
        app:layout_constraintStart_toEndOf="@+id/avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/choose_avatar_btn" />

    <TextView
        android:id="@+id/avatar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toRightOf="@+id/avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

</android.support.constraint.ConstraintLayout>
