<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friends_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".fragments.FriendsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/friends_title_margin"
            android:textSize="@dimen/friends_title_text_size"
            android:text="@string/friend_requests_title"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friend_request_list"
            android:name=".activities.FriendsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/friend_list_item"
            android:nestedScrollingEnabled="false"
            />

        <ProgressBar
            android:id="@+id/friend_requests_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/friend_requests_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/friend_requests_empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/friends_title_margin"
            android:textSize="@dimen/friends_title_text_size"
            android:text="@string/friends_title"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friend_list"
            android:name=".activities.FriendsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/friend_list_item"
            android:nestedScrollingEnabled="false"/>

        <ProgressBar
            android:id="@+id/friends_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/friends_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/friends_empty" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>